# mbed-os

targets/: targets.json
targets/TARGET_STM/TARGET_STM32U5/TARGET_STM32U575xG/: CMakeLists.txt
targets/TARGET_STM/TARGET_STM32U5/TARGET_STM32U575xG/HMIV1/: CMakeLists.txt  PinNames.h
targets/TARGET_STM/TARGET_STM32U5/TARGET_STM32U575xG/VCMV1/: CMakeLists.txt  PeripheralPins.c  PinNames.h
